--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <title>Pig latin!!!!</title>
 </head>
 <body>
-  <h1>&#161;&#161;&#161; PIG LAATINN &#161;&#161;&#161;</h1>
-  <form class="form">
-
-  </form>
+  <div class="main">
+    <h1>&#161;&#161;&#161; PIG LAATINN &#161;&#161;&#161;</h1>
+    <form class="form">
+    <label for="">Enter a word or sentence</label>
+    <input class="inputPhrase" type="text">
+    <button class="submit-btn" type="submit">Click to submit</button>
+    </form>
+    <div id="output">
+    </div>
+  </div>
 </body>
 </html>
