--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>&#161;&#161;&#161; PIG LAATINN &#161;&#161;&#161;</h1>
     <form class="form">
     <label for="">Enter a word or sentence</label>
-    <input class="inputPhrase" type="text">
+    <input value="hi how are you chronological" class="inputPhrase" type="text">
     <button class="submit-btn" type="submit">Click to submit</button>
     </form>
     <div id="output">
