minor style changes

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Pig latin!!!!</title>
+  <title>~ pig latin translator ~</title>
 </head>
-<body>
+<body class="bg">
   <div class="main">
-    <h1>&#161;&#161;&#161; PIG LAATINN &#161;&#161;&#161;</h1>
+    <h1>&#161;&#161;&#161; PIG LAATINN &#161;&#161;&#161;</h1><br>
     <form class="form">
-    <label for="">Enter a word or sentence</label>
-    <input value="hi how are you chronological" class="inputPhrase" type="text">
+    <label for="">Enter a word/phrase/sentence, preferably in English</label><br>
+    <input value="hi how are you chronological" class="inputPhrase" type="text"><br>
     <button class="submit-btn" type="submit">Click to submit</button>
     </form>
     <div id="output">
